Mon Sep 28 05:57:39 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        Integrated idl3plus branch of Jeff with IDL3+ changes

        Thu Sep 24 17:32:27 UTC 2009  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_operation/operation_exs.cpp:
        * TAO_IDL/be_include/be_visitor_operation/operation_exs.h:

          Fixed bug related to unused args in generated empty executor
          implementation methods, and removed 2 unused operations
          from the visitor.

        Wed Sep 23 21:48:41 UTC 2009  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_iface_inst.cpp:

          Removed unused args.

        * TAO_IDL/be/be_global.cpp:

          Replaced '=' with '==' in -Glfa option switch case.

        Wed Sep 23 19:44:56 UTC 2009  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be_include/be_visitor_iface_inst.h:
        * TAO_IDL/be/be_visitor_iface_inst.cpp:

          New files, overlooked in previous checkin.

        Mon Sep 21 19:38:46 UTC 2009  Jeff Parsons  <j.parsons@vanderbilt.edu>

        * TAO_IDL/ast/ast_provides.cpp:
        * TAO_IDL/ast/ast_uses.cpp:
        * TAO_IDL/ast/ast_valuetype.cpp:
        * TAO_IDL/be/be_codegen.cpp:
        * TAO_IDL/be/be_template_interface.cpp:
        * TAO_IDL/be/be_visitor_ccm_pre_proc.cpp:
        * TAO_IDL/be/be_visitor_component/component_exh.cpp:
        * TAO_IDL/be/be_visitor_component/component_svs.cpp:
        * TAO_IDL/be_include/be_template_interface.h:
        * TAO_IDL/be_include/be_visitor_ccm_pre_proc.h:
        * TAO_IDL/include/ast_provides.h:
        * TAO_IDL/include/ast_uses.h:
        * TAO_IDL/util/utl_global.cpp:

          Fixes to various bugs uncovered while running CIAO/tests.

        Fri Sep  4 17:12:34 UTC 2009  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be_include/be_global.h:
        * TAO_IDL/be/be_global.cpp:
        * TAO_IDL/be/be_visitor_component/component_ex_idl.cpp:
