@@ -1,3 +1,8 @@
+Mon Sep 28 11:18:39 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * TAO_IDL/be/be_codegen.cpp:
+          Unicode fixes
+
 Mon Sep 28 05:57:39 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         Integrated idl3plus branch of Jeff with IDL3+ changes
